--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
+    "gl-matrix": "^3.4.4",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
