--- a/package.json
+++ b/package.json
@@ -12,24 +12,32 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
+    "@floating-ui/react": "^0.27.16",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cobe": "^0.6.5",
     "gl-matrix": "^3.4.4",
+    "lucide-react": "^0.544.0",
     "motion": "^12.23.22",
     "next": "15.5.4",
-    "postcss": "^8.5.6",
+    "next-themes": "^0.4.6",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icon": "^1.0.0",
+    "rough-notation": "^0.5.1",
+    "shiki": "^3.13.0",
+    "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
-    "@tailwindcss/postcss": "^4.1.13",
-    "tailwindcss": "^4"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   }
 }
