--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@floating-ui/react": "^0.27.16",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
@@ -25,6 +26,7 @@
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "qss": "^3.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icon": "^1.0.0",
