--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "cobe": "^0.6.5",
     "gl-matrix": "^3.4.4",
     "lucide-react": "^0.544.0",
+    "mongodb": "^6.20.0",
+    "mongoose": "^8.19.0",
     "motion": "^12.23.22",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.6",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "qss": "^3.0.0",
     "react": "19.1.0",
