--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@floating-ui/react": "^0.27.16",
+    "@formspree/react": "^3.0.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
