--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icon": "^1.0.0",
+    "react-markdown": "^10.1.0",
     "rough-notation": "^0.5.1",
     "shiki": "^3.13.0",
     "tailwind-animate": "^0.2.10",
